--- a/home/index.html
+++ b/home/index.html
@@ -6,6 +6,10 @@
 
 <body>
     <h1>Git rocks!</h1>
+    <p>Did you know git means idiot in british slang? <br />
+        When naming it, Torvalds said: "I'm an egotistical bastard, and I name all my projects after myself. First
+        'Linux', now 'git'."
+    </p>
 </body>
 
 </html>
