--- a/home/index.html
+++ b/home/index.html
@@ -10,6 +10,7 @@
         When naming it, Torvalds said: "I'm an egotistical bastard, and I name all my projects after myself. First
         'Linux', now 'git'."
     </p>
+    <p>What a git!</p>
 </body>
 
 </html>
