--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -6,7 +6,7 @@
 
 <body>
     <p>Git spacca!</p>
-    <p>impara ad utilizzare github</p>
+    <p>impara ad utilizzare GitHub</p>
 </body>
 
 </html>
