--- a/home/DarilGit.html
+++ b/home/DarilGit.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git con Daril :D</title>
+    <title>Git con Daril :D
+
+    </title>
 </head>
 <body>
-    <h1>Stiamo facendo Git!</h1>
+    <h1>Stiamo facendo Git! <br>
+        che figata
+    </h1>
     
 </body>
 </html>
