--- a/home/DarilGit.html
+++ b/home/DarilGit.html
@@ -9,8 +9,9 @@
     </title>
 </head>
 <body>
-    <h1>Stiamo facendo Git! <br>
-        che figata
+    <h1>Stiamo facendo Git! (primo commit) <br>
+        che figata! (secondo commit) <br>
+        ora siamo al terzo commit! <br>
     </h1>
     
 </body>
