--- a/home/index.html
+++ b/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <head></head>
-<h1>Header test</h1>
-<h2>Hello world</h2>
+<h1>Welcome to the title</h1>
+<h2>welcome to the subtitle</h2>
 <body></body>
