Added some cool comments

--- a/home/index.html
+++ b/home/index.html
@@ -12,6 +12,8 @@
     </p>
     <p>What a git!</p>
     <p>What a role model!</p>
+    <p>Wow! That's awesome</p>
+    <p>SO cool</p>
 </body>
 
 </html>
