--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,9 @@
 
 <head></head>
 
-<body>Hello everyone!</body>
+<body>
+  <h1>Hello everyone!</h1>
+  <p>Welcome to the Git course!</p>
+</body>
 
 </html>
