let's learn together

--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 
 <body>
   <h1>Hello everyone!</h1>
-  <p>Welcome to the Git course!</p>
+  <p>Welcome to the Git course! <br /> Let's learn together!</p>
 </body>
 
 </html>
