Creazione pagina index corso GIT

--- a/home/index.html
+++ b/home/index.html
@@ -1,17 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>GFT Academy - git</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Corso di GIT - Daril Marra</title>
 </head>
-
 <body>
-    <h1>Git rocks!</h1>
-    <p>Did you know git means idiot in british slang? <br />
-        When naming it, Torvalds said: "I'm an egotistical bastard, and I name all my projects after myself. First
-        'Linux', now 'git'."
-    </p>
-    <p>What a git!</p>
-    <p>What a role model!</p>
+    Ciao Questo è il corso di GIT presentato da <i>Daril Marra</i>
 </body>
-
 </html>
