--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,7 @@
     <body>
       <h1>Welcome to Git Fondamentals!</h1>
       <p>Altra modifica</p>
+      <p>Altra modifica da Mergiare</p>
     </body>
   </head>
 </html>
