--- a/home/index.html
+++ b/home/index.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h1>Welcome to git fundamentals</h1>
-        <p1>How are you?</p1>
+        <p1>secondo commmitnujicsdiuojchiusdhjf</p1>
     </body>
 </html>
