--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
 
 <body>
   <h1>Welcome to Git Fundamentals!</h1>
-  <p>Git was created by Linus</p>
+  <p>Git was created by Linus Torvalds</p>
 </body>
 
 </html>
