--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <h1> Hello world!</h1>
-        <p>Git was created by Linus</p>
+        <p>Git was created by Linus Torval</p>
     </head>
 </html>
