--- a/home/index.html
+++ b/home/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Welcome to git fundamentals</h1>
         <p1>secondo commmitnujicsdiuojchiusdhjf</p1>
+        <p1>terzo commit</p1>
     </body>
 </html>
