--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@
       <h1>Welcome to Git Fondamentals!</h1>
       <p>Altra modifica</p>
       <p>Altra modifica da Mergiare</p>
+      <h2>Modifica successiva per Pull</h2>
     </body>
   </head>
 </html>
