--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-  <h1>Welcome to Git Fundamentals!</h1>
+  <h1>Welcome to Git Fundamentals! A GFT COURSE</h1>
   <p>Git was created by Linus Torvalds</p>
 </body>
 
