Aggiunto pragrafo nel file html per pull

--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Git fundamentals</h1>
     <p>Questo è un secondo branch!</p>
+    <p>Aggiungi un altro paragrafo per il pull.</p>
 </body>
 </html>
