I hope you're having a great time!

--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
   <h1>
     Welcome to the Git course!
   </h1>
-  <p>Are you having a good time?</p>
+  <p>I hope you're having a great time!</p>
 </body>
 
 </html>
